Fixes and refactorings for the INTERACTIVE mode.